--- a/FindKids/app/src/main/AndroidManifest.xml
+++ b/FindKids/app/src/main/AndroidManifest.xml
@@ -45,11 +45,12 @@
         </service>
         <service android:name="com.amap.api.location.APSService"></service>
         <service android:name=".service.FloatWindowService"></service>
+
         <activity
             android:name=".activity.RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".activity.testService"
+            android:name=".activity.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name">
             <!--用于进行网络定位-->
@@ -59,6 +60,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.MapActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
         </activity>
         <meta-data android:name="com.amap.api.v2.apikey" android:value="d3b78593a8cb9d643c4e789680b4af43">
         </meta-data>
