完成主要页面设计，完成主页面架构，开始进行地图绘制

--- a/FindKids/app/src/main/AndroidManifest.xml
+++ b/FindKids/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MapActivity"
+            android:name=".activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
