--- a/FindKidSocket/pom.xml
+++ b/FindKidSocket/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.matio</groupId>
-    <artifactId>PufaSocket</artifactId>
+    <artifactId>FindKidsSocket</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <defaultGoal>compile</defaultGoal>
